# sajda_feed

./: README.md  manage.py  pyproject.toml
docs/api/: auth.md  card.md
docs/database/: card.md
sajda/: admin.py  apps.py  models.py  urls.py  views.py
sajda/domain/: models.py
sajda/migrations/: 0001_initial.py
sajda/serializers/: __init__.py  feed_serializers.py
sajda_feed/: asgi.py  settings.py  urls.py  wsgi.py
